Doc/force-app/main/default/objects/Time_Builder_Timeline_Metric__c/Time_Builder_Timeline_Metric__c.object-meta.xml
<CustomObject>
    <label>Time Builder Timeline Metric</label>
    <nameField>
        <displayFormat>TBT-{000000}</displayFormat>
        <label>Time Builder Timeline Metric Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Time Builder Timeline Metrics</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>