Doc/force-app/main/default/objects/Time_Builder_Timeline_Metric__c/fields/Metric__c.field-meta.xml
<CustomField>
    <fullName>Metric__c</fullName>
    <label>Metric</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Usage_Type__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Unique Logins</fullName>
            </value>
            <value>
                <fullName>Total Logins</fullName>
            </value>
            <value>
                <fullName>Avg Logins per Timekeeper</fullName>
            </value>
            <value>
                <fullName>Hours Spent in Web App</fullName>
            </value>
            <value>
                <fullName>Avg Web App Hrs per Timekeeper</fullName>
            </value>
            <value>
                <fullName>% of Enabled Logging In</fullName>
            </value>
            <value>
                <fullName>Unique Timekeepers</fullName>
            </value>
            <value>
                <fullName>Total Count</fullName>
            </value>
            <value>
                <fullName>Avg per Timekeeper</fullName>
            </value>
            <value>
                <fullName>Hrs Spent Reviewing Journal</fullName>
            </value>
            <value>
                <fullName>Avg Hrs per Timekeeper</fullName>
            </value>
            <value>
                <fullName>% of Enabled Using Journal</fullName>
            </value>
            <value>
                <fullName>Hrs Spent in Printable View</fullName>
            </value>
            <value>
                <fullName>% of Enabled Using Printable View</fullName>
            </value>
            <value>
                <fullName>% of Enabled Using QuickNotes</fullName>
            </value>
            <value>
                <fullName>Total Unique Timekeepers</fullName>
            </value>
            <value>
                <fullName>% of Enabled Timekeepers</fullName>
            </value>
            <value>
                <fullName>Avg Logins per Assistant</fullName>
            </value>
            <value>
                <fullName>Avg Web App Hrs per Assistant</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>