Doc/force-app/main/default/objects/Time_Builder_Timeline_Metric__c/fields/Platform__c.field-meta.xml
<CustomField>
    <fullName>Platform__c</fullName>
    <label>Platform</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Desktop</fullName>
            </value>
            <value>
                <fullName>BlackBerry</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>