Doc/force-app/main/default/objects/Time_Builder_Timeline_Metric__c/fields/Usage_Type__c.field-meta.xml
<CustomField>
    <fullName>Usage_Type__c</fullName>
    <label>Usage Type</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Category__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Timekeepers - Journal Usage</fullName>
            </value>
            <value>
                <fullName>Timekeepers - Web Application Usage</fullName>
            </value>
            <value>
                <fullName>Timekeepers - Printable View Usage</fullName>
            </value>
            <value>
                <fullName>Timekeepers - Quick Note Usage</fullName>
            </value>
            <value>
                <fullName>Total Timekeeper Usage</fullName>
            </value>
            <value>
                <fullName>Assistants - Web Application  Usage</fullName>
            </value>
            <value>
                <fullName>Number of User Administrators Enabled</fullName>
            </value>
            <value>
                <fullName>Total Enabled Users</fullName>
            </value>
            <value>
                <fullName>Timekeepers</fullName>
            </value>
            <value>
                <fullName>Assistants</fullName>
            </value>
            <value>
                <fullName>Total</fullName>
            </value>
            <value>
                <fullName>Number of Timekeepers</fullName>
            </value>
            <value>
                <fullName>Total Timekeepers Receiving Journal</fullName>
            </value>
            <value>
                <fullName>Mobile App Usage</fullName>
            </value>
            <value>
                <fullName>Timers Usage</fullName>
            </value>
            <value>
                <fullName>Number of Timekeepers Enabled</fullName>
            </value>
            <value>
                <fullName>Number of Assistants Enabled</fullName>
            </value>
            <value>
                <fullName>Number of Administrators Enabled</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>