Doc/force-app/main/default/objects/Time_Builder_Timeline_Metric__c/fields/Version__c.field-meta.xml
<CustomField>
    <fullName>Version__c</fullName>
    <label>Version</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>5.0.6.12</fullName>
            </value>
            <value>
                <fullName>5.0.5.10</fullName>
            </value>
            <value>
                <fullName>4.7.4.11</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>