Doc/force-app/main/default/objects/Time_Builder_Timeline_Metric__c/fields/X60_Days__c.field-meta.xml
<CustomField>
    <fullName>X60_Days__c</fullName>
    <label>60 Days</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>